kustomize/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: replicator
spec:
  podSelector:
    matchLabels:
      controller: replicator
  policyTypes:
    - Ingress
